--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.11.0",
-    "@auth0/nextjs-auth0": "^4.14.0",
     "@clerk/nextjs": "^6.36.5",
     "@clerk/themes": "^2.4.46",
-    "@convex-dev/auth": "^0.0.90",
+    "@convex-dev/react-query": "^0.1.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -69,6 +67,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "shadcn": "^3.6.2",
     "tailwindcss": "^4.1.12",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
